# aws-bedrock-knowledge-base

./: README.md  main.py  pyproject.toml
src/embed/: main.py
src/intro/: main.py
src/local_rag/: main.py
